# MarciEngine

./: CMakeLists.txt  MarciEngine.sln
HelloSFML/: CMakeLists.txt  HelloSFML.vcxproj
MarciEngine/: CMakeLists.txt  EngineObject.cpp  EngineObject.h  EngineTypes.h  MarciEngine.cpp  MarciEngine.h  MarciEngine.vcxproj  MarciEngine.vcxproj.filters
MarciEngine/entity/: CollideComponent.cpp  CollideComponent.h  Component.cpp  Component.h  ComponentTypes.h  ControlComponent.cpp  ControlComponent.h  Entity.cpp  Entity.h  EntityBuilder.cpp  EntityBuilder.h  GraphicComponent.cpp  GraphicComponent.h  PositionComponent.cpp  PositionComponent.h  ScriptComponent.cpp  ScriptComponent.h  SpawnComponent.cpp  SpawnComponent.h
MarciEngine/manager/: CollideManager.cpp  CollideManager.h  ControlManager.cpp  ControlManager.h  GraphicManager.cpp  GraphicManager.h  Managers.cpp  Managers.h  PositionManager.cpp  PositionManager.h  ScriptManager.cpp  ScriptManager.h  SpawnManager.cpp  SpawnManager.h  WindowManager.cpp  WindowManager.h
MarciEngine/resource/: Graphic.cpp  Graphic.h  GraphicPrimitive.cpp  GraphicPrimitive.h  GraphicText.cpp  GraphicText.h  GraphicTexture.cpp  GraphicTexture.h
Marcinolaga/: CMakeLists.txt  Marcinolaga.vcxproj  Marcinolaga.vcxproj.filters  main.cpp
Marcinolaga/scene/: CurrentScene.cpp  CurrentScene.h  GameplayScene.cpp  GameplayScene.h  Scene.cpp  Scene.h  SummaryScene.cpp  SummaryScene.h  TitleScene.cpp  TitleScene.h
Marcinolaga/ships/: Bullet.cpp  Bullet.h  Cannon.cpp  Cannon.h  Player.cpp  Player.h  ShipBase.cpp  ShipBase.h  ShipSettings.h  SimpleShip.h  (+3 more)
